# software-kit-for-qualcomm-cloud-ai-100

./: CMakeLists.txt  README.md  bootstrap.sh
.github/workflows/: test-compile.yml
cmake/: compiler_warnings.cmake
inc/: CMakeLists.txt
inc/qaic-openrt-api-hpp/: CMakeLists.txt  QAicOpenRtApi.hpp  QAicOpenRtApiFwdDecl.hpp  QAicOpenRtContext.hpp  QAicOpenRtExceptions.hpp  QAicOpenRtExecObj.hpp  QAicOpenRtFileWriter.hpp  QAicOpenRtInferenceVector.hpp  QAicOpenRtLogger.hpp  QAicOpenRtProgram.hpp  QAicOpenRtQpc.hpp  QAicOpenRtUtil.hpp  QAicOpenRtVersion.hpp
inc/qaic-openrt-api-hpp/qaic-api-common/: CMakeLists.txt  QAicRuntimeTypes.h  QAicTypes.h
lib/: CMakeLists.txt
lib/core/: CMakeLists.txt
lib/core/inc/: QAic.h  QBindingsParser.h  QComponent.h  QContext.h  QExecObj.h  QPrePostProc.h  QProgram.h  QProgramContainer.h  QProgramDevice.h  QProgramInfo.h  QProgramTypes.h
lib/core/proto/: CMakeLists.txt  QAicApi.proto
lib/core/src/: QBindingsParser.cpp  QComponent.cpp  QContext.cpp  QExecObj.cpp  QPrePostProc.cpp  QProgram.cpp  QProgramContainer.cpp  QProgramDevice.cpp
lib/metadata/: CMakeLists.txt
lib/metadata/metadata-common/: CMakeLists.txt
lib/metadata/metadata-common/inc/: AICMetadata.h  AICMetadataExecCtx.h  AICMetadataReader.h  AICMetadataWriter.h  nnc_err_inf.h  nnc_mmap_inf.h  nnc_pmu_inf.h  nnc_port_inf.h  nnc_reprog_mcid_inf.h  nnc_rtld_inf.h  nnc_udma_inf.h  nnc_ulog_inf.h
lib/metadata/metadata-common/src/: AICMetadata.c  AICMetadataReader.c  AICMetadataWriter.cpp
lib/metadata/metadata-flatbuffer/: CMakeLists.txt  README
lib/metadata/metadata-flatbuffer/include/: metadataFlatbufferWriter.h  metadata_flat_knownFields.h  metadataflatbufDecode.hpp  metadataflatbufEncode.hpp
lib/metadata/metadata-flatbuffer/src/: AicMetadataFlat.fbs  metadataFlatbufferWriter.cpp
lib/network-driver/: CMakeLists.txt
lib/network-driver/inc/: QActivationStateCmd.h  QDeviceFactoryInterface.h  QDeviceInterface.h  QDmaBridgeQueue.h  QDmaElement.h  QImageParser.h  QImageParserInterface.h  QKmdDevice.h  QKmdDeviceFactory.h  QKmdRuntime.h  QKmdVC.h  QKmdVCFactory.h  QMetaData.h  QMetaDataInterface.h  QNNConstants.h  QNNConstantsInterface.h  QNNImage.h  QNNImageInterface.h  QNeuralNetwork.h  QNeuralNetworkInterface.h  QRuntime.h  QRuntimeInterface.h  QRuntimeManager.h  QVCFactoryInterface.h  QVirtualChannelInterface.h
lib/network-driver/src/: QImageParser.cpp  QKmdDevice.cpp  QKmdDeviceFactory.cpp  QKmdRuntime.cpp  QNNConstants.cpp  QNNImage.cpp  QNeuralNetwork.cpp  QRuntime.cpp  QRuntimeFunc.cpp  QRuntimeManager.cpp
lib/networkdesc/: CMakeLists.txt
lib/networkdesc/ppp/: CMakeLists.txt
lib/networkdesc/ppp/inc/: PrePostProc.h
lib/networkdesc/ppp/src/: PrePostProc.cpp
lib/networkdesc/proto/: AICNetworkDesc.proto  CMakeLists.txt
lib/networkdesc/qpc/: CMakeLists.txt
lib/networkdesc/qpc/inc/: QAicQpc.h
lib/networkdesc/qpc/src/: QAicQpc.cpp
lib/qlog/: CMakeLists.txt
lib/qlog/inc/: QLog.h  QLogInterface.h  QLogger.h
lib/qlog/src/: QLog.cpp  QLogger.cpp
lib/runtime-platform/: CMakeLists.txt
lib/runtime-platform/inc/: QAicHostApiInfo.h  QDeviceStateInfo.h  QDeviceStateMonitor.h  QMonitorDeviceObserver.h  QNncProtocol.h  QOsal.h  QRuntimePlatform.h  QRuntimePlatformApi.h  QRuntimePlatformInterface.h  QRuntimePlatformKmdDevice.h  QRuntimePlatformKmdDeviceFactory.h  QRuntimePlatformKmdDeviceFactoryInterface.h  QRuntimePlatformKmdDeviceInterface.h  QRuntimePlatformManager.h  QTypes.h  QUtil.h  QWorkqueueElement.h  QWorkqueueElementInterface.h  QWorkqueueProcessor.h  QWorkthread.h
lib/runtime-platform/inc/dev/aic100/: QDevAic100Interface.h  QRuntimePlatformDeviceAic100.h  qaic_accel.h
lib/runtime-platform/inc/dev/common/: QDevCmd.h  QDevInterface.h  QDevMq.h  QRuntimePlatformDeviceInterface.h
lib/runtime-platform/inc/os/common/: QIBuffer.h
lib/runtime-platform/inc/os/linux/: QOsBuffer.h  QPlatformCommon.h
lib/runtime-platform/platform-mutex/: CMakeLists.txt
lib/runtime-platform/platform-mutex/inc/: QMonitorNamedMutex.h  QOsalUtils.h
lib/runtime-platform/platform-mutex/src/: QMonitorNamedMutex.cpp
lib/runtime-platform/platform-mutex/src/linux/: QOsalUtils.cpp
lib/runtime-platform/src/: CMakeLists.txt  QDeviceStateInfo.cpp  QMonitorDeviceObserver.cpp  QRuntimePlatform.cpp  QRuntimePlatformApi.cpp  QRuntimePlatformKmdDevice.cpp  QRuntimePlatformKmdDeviceFactory.cpp  QRuntimePlatformManager.cpp  QUtil.cpp  QWorkqueueElement.cpp  QWorkqueueProcessor.cpp  QWorkthread.cpp
lib/runtime-platform/src/dev/aic100/: QDevInterfaceAic100.cpp  QRuntimePlatformDeviceAic100.cpp
lib/runtime-platform/src/dev/common/: QDevInterface.cpp
lib/runtime-platform/src/os/linux/: QDeviceStateMonitor.cpp  QOsBuffer.cpp  QOsal.cpp
scripts/: build.sh  format.sh
test/: .gitignore  CMakeLists.txt
test/qaic-openrt-api-test/: CMakeLists.txt
test/qaic-openrt-api-test/inc/: QAicOpenRtUnitTestBase.hpp
test/qaic-openrt-api-test/src/: QAicOpenRtApiContextUnitTest.cpp  QAicOpenRtApiExecObjUnitTest.cpp  QAicOpenRtApiProgramUnitTest.cpp  QAicOpenRtApiQpcUnitTest.cpp  QAicOpenRtApiUtilUnitTest.cpp  QAicOpenRtInferenceVectorUnitTest.cpp  QAicOpenRtUnitTest.cpp  QAicOpenRtUnitTestBase.cpp
thirdparty-modules/: CMakeLists.txt
utils/: CMakeLists.txt
utils/qaic-device-partition/: CMakeLists.txt  QAicDevicePartition.cpp  README
utils/qaic-runner/: CMakeLists.txt  QAicRunner.cpp  QAicRunner.h  QAicRunnerMain.cpp  README.md
utils/qaic-util/: CMakeLists.txt  QaicUtil.cpp  QaicUtilTxUI.cpp  README
